[metadata]
name = monasca-tempest-plugin
summary = Tempest plugin for Monasca project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/monasca-api/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: System :: Monitoring

[files]
packages =
    monasca_tempest_tests

[entry_points]
tempest.test_plugins =
    monasca_tests = monasca_tempest_tests.plugin:MonascaTempestPlugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = monasca_tempest_tests/locale
domain = monasca_tempest_tests

[update_catalog]
domain = monasca_tempest_tests
output_dir = monasca_tempest_tests/locale
input_file = monasca_tempest_tests/locale/monasca_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = monasca_tempest_tests/locale/monasca_tempest_plugin.pot
