[metadata]
name = monasca-tempest-plugin
summary = Tempest plugin for Monasca project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/monasca-api/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Monitoring

[files]
packages =
    monasca_tempest_tests

[entry_points]
tempest.test_plugins =
    monasca_tests = monasca_tempest_tests.plugin:MonascaTempestPlugin
